; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_ruleutils.c_looks_like_function.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_ruleutils.c_looks_like_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@COERCE_EXPLICIT_CALL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @looks_like_function to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @looks_like_function(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %21

7:                                                ; preds = %1
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @nodeTag(i32* %8)
  switch i32 %9, label %19 [
    i32 132, label %10
    i32 130, label %18
    i32 133, label %18
    i32 131, label %18
    i32 129, label %18
    i32 128, label %18
  ]

10:                                               ; preds = %7
  %11 = load i32*, i32** %3, align 8
  %12 = bitcast i32* %11 to %struct.TYPE_2__*
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @COERCE_EXPLICIT_CALL, align 4
  %16 = icmp eq i32 %14, %15
  %17 = zext i1 %16 to i32
  store i32 %17, i32* %2, align 4
  br label %21

18:                                               ; preds = %7, %7, %7, %7, %7
  store i32 1, i32* %2, align 4
  br label %21

19:                                               ; preds = %7
  br label %20

20:                                               ; preds = %19
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %20, %18, %10, %6
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @nodeTag(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
